Bug 434830 - Export Color Palette Crash
Summary: Export Color Palette Crash
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 4.4.2
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-23 11:40 UTC by JamellMoore
Modified: 2021-03-31 10:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JamellMoore 2021-03-23 11:40:28 UTC
SUMMARY
When selecting `export current color palette` the application freezes

STEPS TO REPRODUCE
1. Create a new file
2. Select `choose color palette` from the palette docker
3. Select `export current color palette`

OBSERVED RESULT
Application crashes immediately when clicking the button

EXPECTED RESULT
Expect to be presented with a save dialog box. Can't find the tool in the documentation so I'm unsure if that is what is supposed to display.

SOFTWARE/OS VERSIONS
Windows: 10.0.19042

ADDITIONAL INFORMATION

This issue isn't much of a big deal because the palette is automatically saved in the resources folder, but it would be nice to have it fixed.
Comment 1 Halla Rempt 2021-03-23 11:44:42 UTC
I can confirm the issue in krita 4.4.3; it is fixed in the master branch, though.
Comment 2 Halla Rempt 2021-03-31 09:55:56 UTC
Ah, bah, the crash is back, in master too.
Comment 3 Halla Rempt 2021-03-31 10:03:36 UTC
Git commit 7c0d76209e2196b0e3bcf45b2eb84c8058a49726 by Halla Rempt.
Committed on 31/03/2021 at 10:03.
Pushed by rempt into branch 'master'.

Make sure there is a palette selected before exporting

M  +7    -2    libs/widgets/KisPaletteChooser.cpp
M  +2    -0    plugins/dockers/palettedocker/palettedocker_dock.cpp

https://invent.kde.org/graphics/krita/commit/7c0d76209e2196b0e3bcf45b2eb84c8058a49726