Make sure there is a palette selected before exporting

BUG:434830